Fix bug in CSS body overflow

--- a/css/defaults.css
+++ b/css/defaults.css
@@ -4,4 +4,5 @@ body {
   background: #FFF;
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
